<resources>
    <string name="app_name">Mi seña</string>

    <string name="t1">Básico</string>
    <string name="t2">Perfil</string>
    <string name="t3">Premium</string>


    <string name="t4">Recordar mi eleción</string>
    <string name="t5">Cambiar modo</string>
    <string name="t6">Synapse</string>
    <string name="t7">No es un solo curso, es traducción real</string>
    <string name="t8">Un puente entre la voz y las señas</string>
    <string name="t9">Conectando ideas y fomentando la inclusión a través de este programa que más que un curso ofrese traducción en tiempo real</string>
    <string name="t10">Usuario clásico</string>
    <string name="t11">Usuario Premium</string>
    <string name="t12">Diseñado para quienes buscan una experiencia sin complicaciones. Con una interfaz sencilla y amigable, este modo permite traducir fácilmente de voz a lenguaje de señas dactilológicas y viceversa. Perfecto para usuarios que valoran la simplicidad sin perder funcionalidad.</string>
    <string name="t13">Ofrece una experiencia personalizable. Con una cuenta gratuita, puedes acceder a una tienda de paquetes de señas (algunos gratuitos y otros de pago), cambiar el color de la aplicación y contactar con el soporte. También podrás subir tus propios paquetes de señas, aunque con una comisión del 50% si decides venderlos. La interfaz es intuitiva y las señas son presentadas en 2D.</string>
    <string name="t14">El nivel más avanzado de la aplicación. Incluye todas las características del Modo Perfil, pero con acceso adicional a señas en 3D y la posibilidad de subir tus paquetes de señas sin comisiones. Además, podrás utilizar la cámara para capturar señas en tiempo real y convertirlas automáticamente en voz, elevando la experiencia a otro nivel.</string>

    <string name="app_description">Una app para ayudarte traducir, convertir y comunicarte de lenguaje hablado a lenguaje de signos. /n

        Es la primera aplicación multiplataforma que aporta bienestar y seguridad a la comunidad sordo muda nicaragüense.</string>

        <string name="register_button">Regístrate</string>
        <string name="enter_email">Ingrese su correo electrónico</string>
        <string name="enter_password">Contraseña</string>
        <string name="confirm_password">Confirmar Contraseña</string>
        <string name="enter_name">Ingrese su nombre</string>
        <string name="enter_surname">Ingrese su apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="reg_strate">Regístrate</string>
    <string name="logo_description">Si ya tienes cuenta, inicia sesion</string>
    <string name="bot_n_1">Butt</string>


</resources>